yamls/api_awehr_deployment.yml
apiVersion: apps/v1      
kind: Deployment
metadata:
  name: aewehr-api-deployment
spec:
  selector:
    matchLabels:
      app: aewehr-api
  replicas: 1 
  template:
    metadata:
      labels:
        app: aewehr-api
    spec:
     containers:
     - name: db-app
       image: docker.io/aewehr3927/project1-db-app
       ports:
       - containerPort: 8080
       resources:
         requests:
           cpu: 200m
