yamls/frontend_deployment.yml
apiVersion: apps/v1      
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1 
  template:
    metadata:
      labels:
        app: frontend
    spec:
     containers:
     - name: frontend
       image: docker.io/aewehr3927/reverse-proxy:latest 
       ports:
       - containerPort: 80
       resources:
         requests:
           cpu: 40m
