yamls/load-generator.yml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
  - image: busybox
    name: load-generator
    args:
    - /bin/sh 
    - -c
    - >
      for i in `seq 1 7000`;
      do wget -q -O- http://frontend-svc;
      done
  restartPolicy: Never
