yamls/mysql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqldeployment
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: myvol1 
          mountPath: /var/lib/mysql
      volumes:
      - name: myvol1
        persistentVolumeClaim:
          claimName: sqlstorageclaim
