yamls/frontend_nodeport.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
    - nodePort: 30400
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
