yamls/mysql_service.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  selector:
      app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
